# Comms

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: client.h  edisense_comms.h  edisense_types.h  member.h  monitor.h
src/: client.cpp  member.cpp  monitor.cpp
test/: test_client.cpp  test_member.cpp
